# StaticAnalysisWeb

./: .gitignore  Pipfile  app.py  config.py  copy.ps1  freeze.py  index.json  local.py  plot_class.py  plot_routes.py  pyproject.toml  requirements.txt  setup.env  upload.ps1
static/: plots
static/styles/: index.css
staticanalysisweb/: __init__.py  app.py  config.py  freeze.py  local.py  plot_class.py  plot_routes.py
staticanalysisweb/static/: meta_plots
staticanalysisweb/static/styles/: index.css
staticanalysisweb/templates/: index.j2  meta.j2  meta_counter.j2  replays.j2  sidebar_team.j2  topbar.j2
staticanalysisweb/templates/plots/: plot_404.j2  positioning.j2  pregame_positioning.j2  report.j2  rune.j2  scan.j2  smoke.j2  stacks.j2  summary.j2  tormentors.j2  twin_gates.j2  warding.j2  warding_seperate.j2
templates/: 404.j2  base.j2  index.j2  meta.j2  replays.j2  sidebar.j2  sidebar_meta.j2  sidebar_team.j2  team.j2  topbar.j2
templates/plots/: counters.j2  data_summary.j2  draft.j2  draft.js  draft_old.js  positioning.j2  pregame_positioning.j2  rune.j2  scan.j2  smoke.j2  summary.j2  warding_seperate.j2
