[tool.poetry]
name = "staticanalysisweb"
version = "0.1.0"
description = ""
authors = ["Matthew Chadwick <dr.m.chadwick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
flask = "^3.1.0"
jinja2 = "^3.1.5"
python-dotenv = "^1.0.1"
frozen-flask = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
